--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@
 aside,
 nav,
 footer,
-header,
-section {
+header {
   display: block;
 }
 
@@ -164,6 +163,7 @@ h6 {
   font-size: 20px;
   font-weight: 400;
   line-height: 24.2px;
+  text-align: center;
   float: left;
 }
 
@@ -177,4 +177,33 @@ h6 {
 
 .nav__btn:has(.btn:last-child:hover) .btn:first-child {
   background-color: var(--color-white);
+}
+
+.hero {
+  height: 667px;
+  background-image: url(../img/hero.jpg);
+  /* background-position: bottom left; */
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero__inner {
+  padding: 20% 0;
+  display: flex;
+
+  justify-content: space-around;
+}
+.hero__btn {
+  padding: 60px 5px;
+  width: 32%;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  border-radius: 50px;
+  text-align: center;
+  background-color: #3d3a3a;
+}
+.hero__btn-add {
+  padding: 0;
+  background-color: #e02e2e;
 }
