--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
 
 main {
   flex: 1 1 auto;
+  background-color: #008169;
 }
 
 body,
@@ -84,6 +85,7 @@ h6 {
   --color-white: #ffffff;
   --color-hover: #28fb33;
   --color-btn: #ffe500;
+  --color-title: #dfcba7;
 }
 .list-reset {
   margin: 0;
@@ -93,15 +95,13 @@ h6 {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 50px 135px;
+  padding: 50px 75px;
 }
 
 .header {
   margin: 0;
-  background-color: #008169;
+  background-color: #2b4949;
   width: 100%;
-  position: fixed;
-  z-index: 10;
 }
 
 .header__container {
@@ -141,6 +141,7 @@ h6 {
   width: 33%;
   left: 100px;
   top: 22px;
+  z-index: 2;
 }
 .sublist__item {
   background-color: var(--color-hover);
@@ -186,53 +187,61 @@ h6 {
 }
 
 .hero {
-  height: 667px;
   background-image: url(../img/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
 }
-
-.hero__btn {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  padding: 60px 8px;
-  width: 33%;
+.hero__container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 16% 0;
+}
+.hero__left {
+  width: 34%;
+  background-color: rgba(61, 58, 58, 0.8);
+  padding: 60px 20px;
+  border-radius: 50px;
+}
+.title {
+  font-family: Inter;
   font-size: 48px;
   font-weight: 700;
-  line-height: 58px;
-  border-radius: 50px;
-  background-color: #3d3a3a;
-  opacity: 0.82;
-  color: #dfcba7;
+  line-height: 58.09px;
+  color: var(--color-title);
+  text-align: center;
 }
-.hero__btn-add {
-  top: 30%;
-  left: 60%;
+
+.hero__btn {
   padding: 50px 40px;
   font-size: 40px;
   font-weight: 700;
   line-height: 48.41px;
-  background-color: #275657;
+  border-radius: 50px;
+  background-color: rgba(39, 86, 87, 0.8);
+  color: #dfcba7;
 }
-.tour {
-  padding-top: 30px;
-  padding-bottom: 100px;
+.hero__btn:hover {
   background-color: #008169;
 }
-.title {
-  font-size: 48px;
-  font-weight: 700;
+.tour,
+.contacts {
+  padding-top: 30px;
+  padding-bottom: 100px;
+  border-bottom: 2px solid #efe5d3;
+}
+.tour__title {
+  font-size: 44px;
   line-height: 58.09px;
-  color: #dfcba7;
   text-align: center;
   margin-bottom: 50px;
 }
 
 .tour__list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  gap: 3px;
 }
 
 .tour-card {
@@ -240,36 +249,41 @@ h6 {
   font-size: 24px;
   font-weight: 600;
   line-height: 29.27px;
-  width: 301px;
-  height: 358px;
-  background-image: url(../img/pic1.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+  max-width: 301px;
+  width: 100%;
   position: relative;
 }
-.tour-card:nth-child(2) {
-  background-image: url(../img/pic2.png);
+.tour-card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.tour-card:nth-child(3) {
-  background-image: url(../img/pic3.png);
-}
-.tour-card__info svg {
+.tour-card__info {
   position: absolute;
   bottom: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.tour-card__info svg {
+  position: absolute;
+  bottom: -5%;
+  width: 100%;
 }
 .tour-card__title {
-  width: 33%;
+  width: 30%;
   color: #c89c00;
   position: absolute;
-  left: 4%;
-  bottom: 12%;
+  left: 3%;
+  bottom: 8%;
   z-index: 5;
 }
 .tour-card__data {
   color: #275657;
   position: absolute;
-  left: 50%;
-  bottom: 2%;
+  left: 46%;
+  bottom: 0%;
   z-index: 8;
 }
 
@@ -277,7 +291,7 @@ h6 {
   position: absolute;
   width: 67px;
   height: 67px;
-  content: attr(data-badge);
+  content: "%";
   right: -10%;
   top: -10%;
   font-size: 24px;
@@ -285,5 +299,80 @@ h6 {
   border-radius: 50%;
   color: #ee0c0c;
   background-color: rgba(210, 245, 15, 0.684);
-  z-index: 20;
+  z-index: 10;
+}
+
+.contacts__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.contacts__caps {
+  width: 55%;
+  overflow: scroll;
+}
+.contacts__caps img {
+  max-width: 557px;
+}
+
+.contacts__info {
+  padding: 40px 10px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: flex-start;
+  gap: 12px;
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 38.73px;
+  color: var(--color-white);
+  background-color: rgba(197, 189, 189, 0.38);
+  box-shadow: 20px 20px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+address a {
+  padding: 0 5px;
+  color: var(--color-white);
+}
+.foto {
+  padding-bottom: 140px;
+}
+.foto__container {
+  padding: 50px 0;
+}
+.foto__wrapper {
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 46px;
+  overflow: hidden;
+}
+.foto__wrapper img {
+  object-fit: contain;
+}
+.footer {
+  margin: 0;
+  background-color: #2b4949;
+  width: 100%;
+}
+.footer__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 15px;
+}
+.footer__ul a {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.5px;
+  text-align: left;
+  color: var(--color-white);
+}
+@media (max-width: 1284px) {
+  .foto__wrapper {
+    grid-template-columns: 1fr 1fr 1fr;
+
+    gap: 46px;
+  }
 }
