--- a/css/style.css
+++ b/css/style.css
@@ -265,41 +265,36 @@ h6 {
   font-weight: 600;
   line-height: 29.27px;
   max-width: 301px;
-  width: 100%;
   position: relative;
 }
+
 .tour-card__img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 .tour-card__info {
   position: absolute;
-  bottom: 0;
+  bottom: 0%;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  z-index: 5;
 }
 
-.tour-card__info svg {
+.tour-card svg {
   position: absolute;
-  bottom: -5%;
+  bottom: 0;
   width: 100%;
 }
 .tour-card__title {
+  text-align: left;
+  padding: 10px 0 0 10px;
   width: 30%;
   color: #c89c00;
-  position: absolute;
-  left: 3%;
-  bottom: 8%;
-  z-index: 5;
 }
 .tour-card__data {
+  text-align: end;
+  padding: 10px;
   color: #275657;
-  position: absolute;
-  left: 46%;
-  bottom: 0%;
-  z-index: 8;
+  z-index: 5;
 }
 
 .tour-card__badge:after {
@@ -307,8 +302,8 @@ h6 {
   width: 67px;
   height: 67px;
   content: "%";
-  right: -10%;
-  top: -10%;
+  right: -8%;
+  top: -8%;
   font-size: 24px;
   padding: 22px;
   border-radius: 50%;
@@ -357,383 +352,7 @@ address a {
   margin-bottom: 100px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 40px;
-}
-
-.footer {
-  margin: 0;
-  background-color: #2b4949;
-  width: 100%;
-}
-.footer__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 25px 100px;
-}
-.footer__ul {
-  display: flex;
-  gap: 60px;
-}
-.footer__ul li {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  width: 30%;
-}
-.footer__ul a {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 19.5px;
-  text-align: left;
-  color: var(--color-white);
-}
-
-* {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-}
-
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-aside,
-nav,
-footer,
-header {
-  display: block;
-}
-
-body {
-  font-family: Montserrat;
-  line-height: 1;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-main {
-  flex: 1 1 auto;
-  background-color: #008169;
-}
-
-body,
-html {
-  height: 100%;
-  scroll-behavior: smooth;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  background-color: transparent;
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a,
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-
-:root {
-  --color-white: #ffffff;
-  --color-hover: #28fb33;
-  --color-btn: #ffe500;
-  --color-title: #dfcba7;
-}
-.list-reset {
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 50px 75px;
-}
-
-.header {
-  margin: 0;
-  background-color: #2b4949;
-  width: 100%;
-}
-
-.header__container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 5px 100px;
-}
-
-.nav__list {
-  display: flex;
-  gap: 30px;
-  position: relative;
-}
-.nav__link {
-  font-weight: 800;
-  font-size: 20px;
-  color: var(--color-white);
-  text-decoration: underline;
-  text-underline-offset: 4px;
-  transition: color 0.4s ease-in-out;
-}
-.nav__link:hover {
-  color: var(--color-hover);
-}
-.nav__link:focus {
-  outline: none;
-}
-
-.nav__link:active {
-  color: #b7d8a8;
-}
-
-.sublist {
-  display: none;
-  position: absolute;
-  width: 33%;
-  left: 100px;
-  top: 22px;
-  z-index: 2;
-}
-.sublist__item {
-  background-color: var(--color-hover);
-  padding: 8px;
-}
-.sublist__link {
-  font-size: 16px;
-  color: var(--color-white);
-  display: block;
-}
-.sublist .sublist {
-  position: absolute;
-  left: 200px;
-  top: 0px;
-}
-.nav__link:hover + .sublist,
-.sublist:hover {
-  display: block;
-}
-
-.btn {
-  padding: 11px 4px;
-  background-color: var(--color-btn);
-  font-family: Inter;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 24.2px;
-  text-align: center;
-  float: left;
-  transition: background-color 0.4s ease-in-out;
-}
-
-.header__btn-in {
-  padding: 11px;
-  background-color: var(--color-white);
-}
-.header__btn-in:hover {
-  background-color: var(--color-btn);
-}
-
-.nav__btn:has(.header__btn-in:hover) .header__btn {
-  background-color: var(--color-white);
-}
-
-.hero {
-  background-image: url(../img/hero.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: relative;
-}
-.hero__container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 16% 0;
-}
-.hero__left {
-  width: 34%;
-  background-color: rgba(61, 58, 58, 0.8);
-  padding: 60px 20px;
-  border-radius: 50px;
-}
-.title {
-  font-family: Inter;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 58.09px;
-  color: var(--color-title);
-  text-align: center;
-}
-
-.hero__btn {
-  padding: 50px 40px;
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 48.41px;
-  border-radius: 50px;
-  background-color: rgba(39, 86, 87, 0.8);
-  color: #dfcba7;
-}
-.hero__btn:hover {
-  background-color: #008169;
-}
-.tour,
-.contacts {
-  padding-top: 30px;
-  padding-bottom: 100px;
-  border-bottom: 2px solid #efe5d3;
-}
-.tour__title {
-  font-size: 44px;
-  line-height: 58.09px;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.tour__list {
-  display: flex;
-  justify-content: space-between;
-  gap: 3px;
-}
-
-.tour-card {
-  display: block;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 29.27px;
-  max-width: 301px;
-  width: 100%;
-  position: relative;
-}
-.tour-card__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.tour-card__info {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.tour-card__info svg {
-  position: absolute;
-  bottom: -5%;
-  width: 100%;
-}
-.tour-card__title {
-  width: 30%;
-  color: #c89c00;
-  position: absolute;
-  left: 3%;
-  bottom: 8%;
-  z-index: 5;
-}
-.tour-card__data {
-  color: #275657;
-  position: absolute;
-  left: 46%;
-  bottom: 0%;
-  z-index: 8;
-}
-
-.tour-card__badge:after {
-  position: absolute;
-  width: 67px;
-  height: 67px;
-  content: "%";
-  right: -10%;
-  top: -10%;
-  font-size: 24px;
-  padding: 22px;
-  border-radius: 50%;
-  color: #ee0c0c;
-  background-color: rgba(210, 245, 15, 0.684);
-  z-index: 10;
-}
-
-.contacts__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
-.contacts__caps {
-  width: 55%;
-  overflow: scroll;
-}
-.contacts__caps img {
-  max-width: 557px;
-}
-
-.contacts__info {
-  padding: 40px 10px;
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  align-items: flex-start;
-  gap: 12px;
-  font-family: Inter;
-  font-size: 32px;
-  font-weight: 400;
-  line-height: 38.73px;
-  color: var(--color-white);
-  background-color: rgba(197, 189, 189, 0.38);
-  box-shadow: 20px 20px 5px 0px rgba(0, 0, 0, 0.5);
-}
-
-address a {
-  padding: 0 5px;
-  color: var(--color-white);
-}
-.foto {
-  padding-bottom: 140px;
-}
-.foto__container {
-  padding: 50px 0;
-}
-.foto__wrapper {
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-items: center;
   gap: 40px;
 }
 
