--- a/css/style.css
+++ b/css/style.css
@@ -347,13 +347,16 @@ address a {
 .foto {
   padding-top: 50px;
 }
+.foto__container {
+  padding: 50px 0;
+}
 
 .foto__wrapper {
   margin-bottom: 100px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   justify-items: center;
-  gap: 40px;
+  gap: 20px;
 }
 
 .footer {
