--- a/css/media.css
+++ b/css/media.css
@@ -21,34 +21,19 @@
 
   .btn {
     padding: 6px 2px;
-    font-size: 12px;
-  }
-  .hero__btn {
-    padding: 50px 40px;
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 48.41px;
-    border-radius: 50px;
-    background-color: rgba(39, 86, 87, 0.8);
-    color: #dfcba7;
+    font-size: 16px;
   }
 
   .header__btn-in {
     padding: 6px;
   }
 
-  .hero__left {
-    width: 40%;
-
-    padding: 40px 10px;
-    border-radius: 40px;
-  }
   .title {
     font-size: 40px;
   }
 
   .hero__btn {
-    padding: 30px 20px;
+    padding: 30px;
     font-size: 28px;
     border-radius: 40px;
   }
@@ -99,25 +84,42 @@
 
 @media (max-width: 768px) {
   .header__container {
-    padding: 5px 40px;
+    padding: 5px 30px;
   }
-  .logo__img {
-    width: 80%;
-  }
+
   .nav {
     display: none;
+  }
+  .btn {
+    padding: 4px 2px;
+    font-size: 12px;
   }
   .menu__btn {
     display: flex;
     order: 1;
   }
   .hero__container {
-    display: flex;
     flex-direction: column;
     gap: 20px;
   }
+  .hero__left {
+    width: 60%;
+  }
+  .title {
+    font-size: 32px;
+  }
+  .hero__btn {
+    padding: 30px;
+    font-size: 24px;
+  }
+  .tour,
+  .contacts,
+  .foto {
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
   .tour__container {
-    padding: 50px 25px;
+    padding: 10px 25px;
   }
 
   .contacts__wrapper {
@@ -139,7 +141,56 @@
   .tour-card__info {
     bottom: -5%;
   }
+  .footer__container {
+    padding: 5px 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-self: center;
+  }
+
   .footer__ul {
     gap: 10px;
+  }
+}
+@media (max-width: 480px) {
+  .header__container {
+    padding: 15px;
+  }
+  .logo {
+    width: 60%;
+  }
+  .title {
+    font-size: 28px;
+  }
+  .hero__btn {
+    font-size: 20px;
+  }
+  .tour,
+  .contacts,
+  .foto {
+    padding-top: 10px;
+    padding-bottom: 50px;
+  }
+  .tour__title {
+    margin-bottom: 25px;
+  }
+  .logo:last-child {
+    display: none;
+  }
+}
+
+@media (max-width: 360px) {
+  .logo {
+    display: none;
+  }
+  .hero__left {
+    width: 70%;
+  }
+  .title {
+    font-size: 24px;
+  }
+  .hero__btn {
+    padding: 15px 30px;
+    font-size: 16px;
   }
 }
