--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ h6 {
   text-align: end;
   padding: 10px;
   color: #275657;
-  z-index: 5;
+  /* z-index: 5; */
 }
 
 .tour-card__badge:after {
