--- a/css/style.css
+++ b/css/style.css
@@ -215,9 +215,10 @@ h6 {
 }
 .hero__left {
   width: 45%;
-  background-color: rgba(61, 58, 58, 0.8);
+  background-color: rgba(61, 58, 58, 0.85);
   padding: 60px 20px;
   border-radius: 50px;
+  border: 1px solid var(--color-title);
 }
 .title {
   font-family: Inter;
@@ -234,8 +235,9 @@ h6 {
   font-weight: 700;
   line-height: 48.41px;
   border-radius: 50px;
-  background-color: rgba(39, 86, 87, 0.8);
-  color: #dfcba7;
+  background-color: rgba(39, 86, 87, 0.85);
+  color: var(--color-title);
+  border: 1px solid var(--color-title);
 }
 .hero__btn:hover {
   background-color: #008169;
@@ -294,7 +296,6 @@ h6 {
   text-align: end;
   padding: 10px;
   color: #275657;
-  /* z-index: 5; */
 }
 
 .tour-card__badge:after {
