--- a/css/style.css
+++ b/css/style.css
@@ -244,8 +244,7 @@ h6 {
 }
 .tour,
 .contacts {
-  padding-top: 30px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   border-bottom: 2px solid #efe5d3;
 }
 .tour__title {
@@ -346,14 +345,14 @@ address a {
   color: var(--color-white);
 }
 .foto {
-  padding-top: 50px;
+  /* padding-top: 50px; */
 }
 .foto__container {
   padding: 50px 0;
 }
 
 .foto__wrapper {
-  margin-bottom: 100px;
+  margin-bottom: 80px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   justify-items: center;
